Service, controllers y correcciones varias